istio/traffic-management/virtual-service-category-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: category-service-vs
  namespace: techstore
spec:
  hosts:
    - category-service
    - category-service.techstore.svc.cluster.local
  http:
    - route:
        - destination:
            host: category-service
            subset: v1
          weight: 100
      timeout: 30s
      retries:
        attempts: 2
        perTryTimeout: 10s
        retryOn: 5xx,connect-failure
